<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:background="#fff"
    android:layout_gravity="right">

    <TextView
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_weight="3"
        android:textSize="15sp"
        android:text="@string/checkupdate"/>

    <TextView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_weight="3"
        android:textSize="15sp"
        android:text="@string/settings"/>

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_weight="3"
        android:textSize="15sp"
        android:text="@string/aboutus"/>

    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_weight="3"
        android:textSize="15sp"
        android:text="@string/exit"/>
</LinearLayout>